removes dome html classes

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/91a843f5d1.js"
       crossorigin="anonymous"
     ></script>
+    <meta name="description" content="This is a template of an email" />
     <title>An Email Template</title>
     <link rel="stylesheet" href="/src/style.css" />
   </head>
@@ -43,7 +44,7 @@
 
     <footer>
       <span class="footer-text">
-        <span class="number">Phone: 02892921928</span>
+        <span>Phone: 02892921928</span>
 
         <div>
           <a href="mailto:Shai@payrolleasy.co.uk"
@@ -51,11 +52,9 @@
           >
         </div>
 
-        <div class="icons">
-          <i class="fa-brands fa-twitter"></i>
-          <i class="fa-brands fa-instagram"></i>
-          <i class="fa-brands fa-linkedin-in"></i>
-        </div>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-linkedin-in"></i>
       </span>
     </footer>
   </body>
