--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
             >Email: Shai@payrolleasy.co.uk</a
           >
         </div>
-
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-linkedin-in"></i>
+        <div class="icons">
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-linkedin-in"></i>
+        </div>
       </span>
     </footer>
   </body>
